--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,6 +5,7 @@ footer{
   padding: 2em 0;  
   @include desktop {
     justify-content: flex-start;
+    padding-left: 2em;
   }
   p {
     color: #c2c2c2;
