--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,9 @@
+.screen-reader {
+  overflow: hidden;  
+  width: 1px;
+  height: 1px;
+}
+
 .header {
   transition: .5s;
 }
@@ -7,14 +13,12 @@ header * {
 }
 
 .header-content{
-  // transition: .5s;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;  
   justify-content: center;
   align-content: center;
   align-items: center;
-  
   height: 90vh;
   padding: 2em;
   @include tablet {
@@ -23,17 +27,13 @@ header * {
     
   @include desktop {
     justify-content: flex-start;   
-    
   }    
   }
 }
-.header-info {
-  @include tablet {
-    // width: 25%;  
-  }    
-}
 
 .search-form {
+  display: flex;
+  justify-content: center;
   @include tablet {
     width: 25%;
   }    
@@ -44,9 +44,8 @@ header * {
 }
 
 .logo {
+  text-align: center;  
   margin-bottom: 1rem;
-  text-align: center;
-  
   img {
     @include tablet {
       width: 100%;    
@@ -54,33 +53,25 @@ header * {
   }
 }
 
-.screen-reader {
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-}
-
-.search-form {
-  display: flex;
-  justify-content: center;
-}
-
 .new-layout {
   height: auto;
   justify-content: flex-start;
   .logo {
-    height: 50%;
-  }
-  @include tablet {
-    .resize-logo{
-      width: 40%;
-      justify-content: flex-start;
-    }
-  @include desktop {
-    .resize-logo{
-      // width: 100%;   
-      height: 80px; 
+    flex-direction: column;
+    @include tablet {
+      .resize-logo{
+        justify-content: flex-start;         
+        width: 40%;
+        @include desktop {
+          .resize-logo{
+            text-align: start; 
+            width: 30%;               
+            height: auto; 
+            padding: 0;
+            margin-right: -80px;
+          }
+        }
+      }
     }
   }  
-  }
 }
